Just checked my knowledge of ternary operators and checked property was successfull and moving on to the next question

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
         <input type="textbox" placeholder="Enter radius here..." id="radiusBox">
         <button type="submit" id="resultBtn">Calculate Area</button>
         <h3 id="displayResult"></h3> -->
-        <h1>Random Number Generator</h1>
+        <!-- <h1>Random Number Generator</h1>
         <label>Upper Limit</label>
         <input type="textbox" placeholder="set upper limit number..." id="upperlimit">
         <label>Lower Limit</label>
         <input type="textbox" placeholder="set lower limit number...." id="lowerlimit">
         <button type="submit" id="randombtn">Randomize</button>
-        <h3 id="randomdisplay"></h3>
+        <h3 id="randomdisplay"></h3> -->
+
+        <h1>Are you a family?</h1>
+        <input type="checkbox" id="subscribe">
+        <label> Subscribed</label>
+
+        <button type="submit" id="checkbtn">Check</button>
+        <h3 id="displaycheck"></h3>
         
     </div>
     
