Just tried out switches & string methods and both worked so i will go to the next level

--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         <button type="submit" id="randombtn">Randomize</button>
         <h3 id="randomdisplay"></h3> -->
 
-        <h1>Are you a family?</h1>
+        <!-- <h1>Are you a family?</h1>
         <input type="checkbox" id="subscribe">
         <label> Subscribed</label>
 
         <button type="submit" id="checkbtn">Check</button>
-        <h3 id="displaycheck"></h3>
+        <h3 id="displaycheck"> -->
+
+        <h1>Day of the Week</h1>
+        <label>What day is today</label><br><br>
+        <input type="textbox" placeholder="Enter the date here.." id="datetxtbox">
+        <button type="submit" id="answerbtn">Submit</button>
+        <h3 id="displayanswer"></h3>
         
     </div>
     
