Just tried out the string slicing & methoc chaining worked

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         <button type="submit" id="checkbtn">Check</button>
         <h3 id="displaycheck"> -->
 
-        <h1>Day of the Week</h1>
+        <!-- <h1>Day of the Week</h1>
         <label>What day is today</label><br><br>
         <input type="textbox" placeholder="Enter the date here.." id="datetxtbox">
         <button type="submit" id="answerbtn">Submit</button>
-        <h3 id="displayanswer"></h3>
-        
+        <h3 id="displayanswer"></h3> -->
+
+        <h1>String Slicing & Method Chaining</h1>
+        <label>Type anything</label>
+        <input type="textbox" placeholder="type anything ...." id="mytext">
+        <button type="submit" id="mybtn">Submit</button>
+        <h3 id="myh3"></h3>
     </div>
     
     <script src="index.js"></script>
