I have understood the logical operators & Strict Equality

--- a/index.html
+++ b/index.html
@@ -39,11 +39,19 @@
         <button type="submit" id="answerbtn">Submit</button>
         <h3 id="displayanswer"></h3> -->
 
-        <h1>String Slicing & Method Chaining</h1>
+        <!-- <h1>String Slicing & Method Chaining</h1>
         <label>Type anything</label>
         <input type="textbox" placeholder="type anything ...." id="mytext">
         <button type="submit" id="mybtn">Submit</button>
-        <h3 id="myh3"></h3>
+        <h3 id="myh3"></h3> -->
+
+        <h1>Sign In</h1>
+        <label>Name:</label>
+        <input type="textbox" placeholder="Name...." id="usernametxtbox">
+        <label>Password:</label>
+        <input type="textbox" placeholder="Password...." id="Passwordtxtbox">
+        <button type="submit" id="btnsubmit">Login</button>
+        <h3 id="showh3"></h3>
     </div>
     
     <script src="index.js"></script>
