Done with while & for loops

--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
         <button type="submit" id="mybtn">Submit</button>
         <h3 id="myh3"></h3> -->
 
-        <h1>Sign In</h1>
+        <!-- <h1>Sign In</h1>
         <label>Name:</label>
         <input type="textbox" placeholder="Name...." id="usernametxtbox">
         <label>Password:</label>
         <input type="textbox" placeholder="Password...." id="Passwordtxtbox">
         <button type="submit" id="btnsubmit">Login</button>
-        <h3 id="showh3"></h3>
+        <h3 id="showh3"></h3> -->
+
+        <h1>Countdown</h1>
+        <label>Start Number</label>
+        <input type="text" placeholder="Enter a number..." id="ctdtxtbox">
+        <button type="submit" id="ctdbtn">Show Countdown</button>
+        <h3 id="showctd"></h3>
     </div>
     
     <script src="index.js"></script>
