A little conceptual clearance needed but passed and done the question.

--- a/index.html
+++ b/index.html
@@ -53,11 +53,21 @@
         <button type="submit" id="btnsubmit">Login</button>
         <h3 id="showh3"></h3> -->
 
-        <h1>Countdown</h1>
+        <!-- <h1>Countdown</h1>
         <label>Start Number</label>
         <input type="text" placeholder="Enter a number..." id="ctdtxtbox">
         <button type="submit" id="ctdbtn">Show Countdown</button>
-        <h3 id="showctd"></h3>
+        <h3 id="showctd"></h3> -->
+
+        <h1>Arrays + Spread Operator + Function Expression</h1>
+        <label>Num 1:</label>
+        <input type="text" placeholder="enter number here.." id="num1txt">
+        <label>Num 2:</label>
+        <input type="text" placeholder="enter number here..." id="num2txt">
+        <label>Num 3:</label>
+        <input type="text" placeholder="enter number here..." id="num3txt">
+        <button type="button" id="arrsubmit">Submit</button>
+        <h3 id="arrh3"></h3>
     </div>
     
     <script src="index.js"></script>
