My understanding of JavaScript is increasing and now I also have knowledge of Rest Parameters, Arrow Functions and Reduce()

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <button type="submit" id="ctdbtn">Show Countdown</button>
         <h3 id="showctd"></h3> -->
 
-        <h1>Arrays + Spread Operator + Function Expression</h1>
+        <!-- <h1>Arrays + Spread Operator + Function Expression</h1>
         <label>Num 1:</label>
         <input type="text" placeholder="enter number here.." id="num1txt">
         <label>Num 2:</label>
@@ -67,7 +67,14 @@
         <label>Num 3:</label>
         <input type="text" placeholder="enter number here..." id="num3txt">
         <button type="button" id="arrsubmit">Submit</button>
-        <h3 id="arrh3"></h3>
+        <h3 id="arrh3"></h3> -->
+
+        <h1>Rest Parameters + Arrow Functions + Reduce</h1>
+        <label>Number: </label>
+        <input type="text" placeholder="Enter number here..." id="numtxt">
+        <button type="button" id="addbtn">Add to list</button>
+        <button type="button" id="resultbtn">Calculate</button>
+        <h3 id="newh3"></h3>
     </div>
     
     <script src="index.js"></script>
