Understood Dates and Nested Objects better and done some exercise

--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
         <button type="button" id="arrsubmit">Submit</button>
         <h3 id="arrh3"></h3> -->
 
-        <h1>Rest Parameters + Arrow Functions + Reduce</h1>
+        <!-- <h1>Rest Parameters + Arrow Functions + Reduce</h1>
         <label>Number: </label>
         <input type="text" placeholder="Enter number here..." id="numtxt">
         <button type="button" id="addbtn">Add to list</button>
         <button type="button" id="resultbtn">Calculate</button>
-        <h3 id="newh3"></h3>
+        <h3 id="newh3"></h3> -->
+
+        <h1>Setting Up Meeting Schedule</h1>
+        <lable>Organizer Name: </lable>
+        <input type="text" placeholder="Enter your name here.." id="organizerName">
+        <label>Email: </label>
+        <input type="text" placeholder="Enter your email here..." id="organizeremail">
+        <button type="submit" id="submitmeeting">Schedule a Meeting</button>
+        <h3 id="meetingscreen"></h3>
     </div>
     
     <script src="index.js"></script>
