Understood about the closures and timeouts and done some exercises

--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
         <button type="button" id="resultbtn">Calculate</button>
         <h3 id="newh3"></h3> -->
 
-        <h1>Setting Up Meeting Schedule</h1>
-        <lable>Organizer Name: </lable>
-        <input type="text" placeholder="Enter your name here.." id="organizerName">
-        <label>Email: </label>
-        <input type="text" placeholder="Enter your email here..." id="organizeremail">
-        <button type="submit" id="submitmeeting">Schedule a Meeting</button>
+        <h1>CountDown</h1>
+        <lable>Starting Number: </lable>
+        <input type="text" placeholder="Enter the starting number ..." id="startnum">
+        <button type="submit" id="begincount">Begin Countdown</button>
         <h3 id="meetingscreen"></h3>
     </div>
     
